Maven: Mimick the resources setup from Gradle - include jbake-dist/src/dist/lib/logging/logback.xml